# scale-printer-mqtt

./: ACTIONS.md  README.md
.github/workflows/: build.yml  codeql.yml  integration-test.yml  publish.yml  unit-test.yml
printer_daemon/: Containerfile  README.md  printer-daemon.env.example  printer-daemon.service  pyproject.toml  requirements.txt
scale_daemon/: Containerfile  README.md  pyproject.toml  requirements-dev.txt  scale-daemon.env.example  scale-daemon.service
selinux/: generate-container-policy.sh
udev/: 99-usb-serial-devices.rules
