[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scale-daemon"
version = "0.1.0"
description = "Daemon to read from a serial scale and publish to MQTT."
authors = [
    {name = "Bernardo Donadio", email = "bernardo@donadio.solutions"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "paho-mqtt>=2.0.0,<3.0.0",
    "pyserial>=3.5,<4.0",
    "python-dotenv>=1.1.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-cov>=6.2,<7.0",
    "black>=25.1,<26.0",
    "flake8>=7.3,<8.0",
]

[project.scripts]
scale-daemon = "scale_daemon.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scale_daemon"]
